--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">TemAcucar</string>
-    <string name="fb_app_id">590253407789297</string>
+    <string name="app_name">Tem Açúcar?</string>
 </resources>
